lets rely on MMS SMS library at handling SMS too

--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -735,7 +735,7 @@
     <string name="indicator_fast_scroll_title">Indicator Fast Scroll (písmená na posuvníku)</string>
     <string name="event_bus_title">Event Bus (komunikácia vrámci apky)</string>
     <string name="audio_record_view_title">Audio Record View (vizualizácia zvukov)</string>
-    <string name="sms_mms_title">SMS MMS (spravovanie MMS)</string>
+    <string name="sms_mms_title">SMS MMS (spravovanie SMS a MMS)</string>
 
     <!-- Google Play listing -->
     <string name="deprecated_app">ZASTARALÁ: Táto verzia aplikácie už nie je podporovaná. Stiahnite si Pro verziu na https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
