--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -669,7 +669,7 @@
     <string name="indicator_fast_scroll_title">Indicator Fast Scroll (滾動條上字母)</string>
     <string name="event_bus_title">Event Bus (應用程式溝通)</string>
     <string name="audio_record_view_title">Audio Record View (音訊視覺化)</string>
-    <string name="sms_mms_title">SMS MMS (MMS handling)</string>
+    <string name="sms_mms_title">SMS MMS (SMS and MMS handling)</string>
 
     <!-- Google Play listing -->
     <string name="deprecated_app">已捨棄: 這版本的應用程式不再維護，在這取得專業版  https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
