adding some contact placeholder related strings

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -30,6 +30,9 @@
     <string name="playpause">Hrát / Pauza</string>
     <string name="next">Následující</string>
     <string name="number">Číslo</string>
+    <string name="no_contacts_found">Nenalezeny žádné kontakty.</string>
+    <string name="request_the_required_permissions">Vyžádat potřebná oprávnění</string>
+    <string name="no_access_to_contacts">The app could not access your contacts</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Spravovat blokovaná čísla</string>
