--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -30,6 +30,9 @@
     <string name="playpause">Lecture / Pause</string>
     <string name="next">Suivant</string>
     <string name="number">Numéro</string>
+    <string name="no_contacts_found">Aucun contact n\'a été trouvé</string>
+    <string name="request_the_required_permissions">Demander les autorisations nécessaires</string>
+    <string name="no_access_to_contacts">The app could not access your contacts</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Gérer les numéros bloqués</string>
