--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -30,6 +30,9 @@
     <string name="playpause">Riproduci / Pausa</string>
     <string name="next">Successiva</string>
     <string name="number">Numero</string>
+    <string name="no_contacts_found">Nessun contatto trovato</string>
+    <string name="request_the_required_permissions">Richiedi le permissioni necessarie</string>
+    <string name="no_access_to_contacts">The app could not access your contacts</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Gestisci i numeri bloccati</string>
