--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -30,6 +30,9 @@
     <string name="playpause">Afspelen / Pauzeren</string>
     <string name="next">Volgende</string>
     <string name="number">Nummer</string>
+    <string name="no_contacts_found">Geen contacten gevonden</string>
+    <string name="request_the_required_permissions">Om benodigde machtigingen vragen</string>
+    <string name="no_access_to_contacts">The app could not access your contacts</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Geblokkeerde nummers beheren</string>
