--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -30,6 +30,9 @@
     <string name="playpause">Odtwórz / zatrzymaj</string>
     <string name="next">Następny</string>
     <string name="number">Numer</string>
+    <string name="no_contacts_found">Nie znaleziono kontaktów</string>
+    <string name="request_the_required_permissions">Wymagaj koniecznych uprawnień</string>
+    <string name="no_access_to_contacts">The app could not access your contacts</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Zarządzaj zablokowanymi numerami</string>
