--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -30,6 +30,9 @@
     <string name="playpause">Play / Pause</string>
     <string name="next">Next</string>
     <string name="number">رقم</string>
+    <string name="no_contacts_found">لم يتم العثور على جهات اتصال</string>
+    <string name="request_the_required_permissions">طلب الأذونات المطلوبة</string>
+    <string name="no_access_to_contacts">The app could not access your contacts</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">إدارة الأرقام المحظورة</string>
