--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -30,6 +30,9 @@
     <string name="playpause">Oynat / Dayan</string>
     <string name="next">Sonrakı</string>
     <string name="number">Nömrə</string>
+    <string name="no_contacts_found">No contacts found</string>
+    <string name="request_the_required_permissions">Lazım olan icazələri istə</string>
+    <string name="no_access_to_contacts">The app could not access your contacts</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Manage blocked numbers</string>
