--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -30,6 +30,9 @@
     <string name="playpause">Play / Pause</string>
     <string name="next">Next</string>
     <string name="number">Rhif</string>
+    <string name="no_contacts_found">Ni chanfuwyd unrhyw gysylltiadau</string>
+    <string name="request_the_required_permissions">Gofyn am y caniatâd sydd ei angen</string>
+    <string name="no_access_to_contacts">The app could not access your contacts</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Rheoli rhifau wedi\'u rhwystro</string>
