--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -30,6 +30,9 @@
     <string name="playpause">Wiedergabe / Pause</string>
     <string name="next">Nächster Titel</string>
     <string name="number">Nummer</string>
+    <string name="no_contacts_found">Keine Kontakte gefunden</string>
+    <string name="request_the_required_permissions">Benötigte Berechtigungen anfordern</string>
+    <string name="no_access_to_contacts">The app could not access your contacts</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Blockierte Nummern verwalten</string>
