--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -30,6 +30,9 @@
     <string name="playpause">Αναπαραγωγή / Παύση</string>
     <string name="next">Επόμενο</string>
     <string name="number">Αριθμός</string>
+    <string name="no_contacts_found">Δεν βρέθηκαν Επαφές</string>
+    <string name="request_the_required_permissions">Ζητούνται τα απαιτούμενα δικαιώματα</string>
+    <string name="no_access_to_contacts">The app could not access your contacts</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Διαχείριση αποκλεισμένων αριθμών</string>
