--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -30,6 +30,9 @@
     <string name="playpause">Play / Pause</string>
     <string name="next">Next</string>
     <string name="number">Numero</string>
+    <string name="no_contacts_found">Kontakteja ei löytynyt</string>
+    <string name="request_the_required_permissions">Pyydä tarvittavia oikeuksia</string>
+    <string name="no_access_to_contacts">The app could not access your contacts</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Muuta estettyjä numeroita</string>
