--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -30,6 +30,9 @@
     <string name="playpause">Reproduciraj / Pauziraj</string>
     <string name="next">Sljedeća</string>
     <string name="number">Broj</string>
+    <string name="no_contacts_found">Nisu pronađeni kontakti</string>
+    <string name="request_the_required_permissions">Zatraži potrebna dopuštenja</string>
+    <string name="no_access_to_contacts">The app could not access your contacts</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Upravljanje blokiranim brojevima</string>
