--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -30,6 +30,9 @@
     <string name="playpause">Lejátszás/szüneteltetés</string>
     <string name="next">Következő</string>
     <string name="number">Telefonszám</string>
+    <string name="no_contacts_found">No contacts found</string>
+    <string name="request_the_required_permissions">A kívánt jogosultságok igénylése</string>
+    <string name="no_access_to_contacts">The app could not access your contacts</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Zárolt telefonszámok kezelése</string>
