--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -30,6 +30,9 @@
     <string name="playpause">再生 / 一時停止</string>
     <string name="next">次へ</string>
     <string name="number">番号</string>
+    <string name="no_contacts_found">連絡先が見つかりません</string>
+    <string name="request_the_required_permissions">Request the required permissions</string>
+    <string name="no_access_to_contacts">The app could not access your contacts</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">ブロックした番号を管理</string>
