--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -30,6 +30,9 @@
     <string name="playpause">Воспроизведение / Пауза</string>
     <string name="next">Следующая</string>
     <string name="number">Номер</string>
+    <string name="no_contacts_found">Контакты не найдены</string>
+    <string name="request_the_required_permissions">Запрос необходимых разрешений</string>
+    <string name="no_access_to_contacts">The app could not access your contacts</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Управление блокируемыми номерами</string>
