--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -30,6 +30,9 @@
     <string name="playpause">Hrať / Pauznúť</string>
     <string name="next">Nasledujúca</string>
     <string name="number">Číslo</string>
+    <string name="no_contacts_found">Nenašli sa žiadne kontakty</string>
+    <string name="request_the_required_permissions">Vyžiadať potrebné oprávnenia</string>
+    <string name="no_access_to_contacts">Nepodarilo sa získať zoznam kontaktov</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Spravovať blokované čísla</string>
