--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -30,6 +30,9 @@
     <string name="playpause">Spela / Pausa</string>
     <string name="next">Nästa</string>
     <string name="number">Nummer</string>
+    <string name="no_contacts_found">Inga kontakter hittades</string>
+    <string name="request_the_required_permissions">Begär de behörigheter som krävs</string>
+    <string name="no_access_to_contacts">The app could not access your contacts</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Hantera blockerade nummer</string>
