--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -30,6 +30,9 @@
     <string name="playpause">Відтворення / Пауза</string>
     <string name="next">Наступний</string>
     <string name="number">Номер</string>
+    <string name="no_contacts_found">Контактів не знайдено</string>
+    <string name="request_the_required_permissions">Запит на необхідні дозволи</string>
+    <string name="no_access_to_contacts">The app could not access your contacts</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Керувати блокованими номерами</string>
