--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -30,6 +30,9 @@
     <string name="playpause">播放 / 暫停</string>
     <string name="next">下一首</string>
     <string name="number">號碼</string>
+    <string name="no_contacts_found">未發現聯絡人</string>
+    <string name="request_the_required_permissions">請求必要的權限</string>
+    <string name="no_access_to_contacts">The app could not access your contacts</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">管理黑名單</string>
