--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -32,7 +32,7 @@
     <string name="number">Αριθμός</string>
     <string name="no_contacts_found">Δεν βρέθηκαν Επαφές</string>
     <string name="request_the_required_permissions">Ζητούνται τα απαιτούμενα δικαιώματα</string>
-    <string name="no_access_to_contacts">The app could not access your contacts</string>
+    <string name="no_access_to_contacts">Η εφαρμογή δεν έχει πρόσβαση στις επαφές σας</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Διαχείριση αποκλεισμένων αριθμών</string>
