--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -26,13 +26,13 @@
     <string name="download">Download</string>
     <string name="notification">Underretning</string>
     <string name="email">E-mail</string>
-    <string name="previous">Previous</string>
-    <string name="playpause">Play / Pause</string>
-    <string name="next">Next</string>
+    <string name="previous">Forrige</string>
+    <string name="playpause">Afspil / Pause</string>
+    <string name="next">Næste</string>
     <string name="number">Nummer</string>
     <string name="no_contacts_found">Ingen kontakter fundet</string>
     <string name="request_the_required_permissions">Anmod om de krævede tilladelser</string>
-    <string name="no_access_to_contacts">The app could not access your contacts</string>
+    <string name="no_access_to_contacts">Appen kunne ikke tilgå dine kontakter</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Administrér blokerede numre</string>
