--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -43,7 +43,7 @@
     <string name="blocked_numbers">Blokerede numre</string>
     <string name="must_make_default_dialer">Du skal gøre denne app til standardopkaldsappen for at gøre brug af blokerede numre.</string>
     <string name="set_as_default">Gør til standard</string>
-    <string name="block_confirmation">Are you sure you want to block \"%s\"?</string>
+    <string name="block_confirmation">Er du sikker på at du vil blokere \"%s\"?</string>
 
     <!-- Favorites -->
     <string name="favorites">Bogmærker</string>
