--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -32,7 +32,7 @@
     <string name="number">Número</string>
     <string name="no_contacts_found">No s\'ha trobat cap contacte</string>
     <string name="request_the_required_permissions">Sol·liciteu els permisos necessaris</string>
-    <string name="no_access_to_contacts">L\’aplicació no ha pogut accedir als teus contactes</string>
+    <string name="no_access_to_contacts">L\'aplicació no ha pogut accedir als teus contactes</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Gestiona els números bloquejats</string>
