adding a new string as a placeholder for some text fields

--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -33,6 +33,7 @@
     <string name="no_contacts_found">No s\'ha trobat cap contacte</string>
     <string name="request_the_required_permissions">Sol·liciteu els permisos necessaris</string>
     <string name="no_access_to_contacts">L\'aplicació no ha pogut accedir als teus contactes</string>
+    <string name="insert_text_here">Insert text here</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Gestiona els números bloquejats</string>
