--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -33,6 +33,7 @@
     <string name="no_contacts_found">Nenašli sa žiadne kontakty</string>
     <string name="request_the_required_permissions">Vyžiadať potrebné oprávnenia</string>
     <string name="no_access_to_contacts">Nepodarilo sa získať zoznam kontaktov</string>
+    <string name="insert_text_here">Zadajte text sem</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Spravovať blokované čísla</string>
