--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -33,6 +33,7 @@
     <string name="no_contacts_found">لم يتم العثور على جهات اتصال</string>
     <string name="request_the_required_permissions">طلب الأذونات المطلوبة</string>
     <string name="no_access_to_contacts">The app could not access your contacts</string>
+    <string name="insert_text_here">Insert text here</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">إدارة الأرقام المحظورة</string>
