--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -33,6 +33,7 @@
     <string name="no_contacts_found">Nenalezeny žádné kontakty.</string>
     <string name="request_the_required_permissions">Vyžádat potřebná oprávnění</string>
     <string name="no_access_to_contacts">The app could not access your contacts</string>
+    <string name="insert_text_here">Insert text here</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Spravovat blokovaná čísla</string>
