--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -33,6 +33,7 @@
     <string name="no_contacts_found">Nisu pronađeni kontakti</string>
     <string name="request_the_required_permissions">Zatraži potrebna dopuštenja</string>
     <string name="no_access_to_contacts">The app could not access your contacts</string>
+    <string name="insert_text_here">Insert text here</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Upravljanje blokiranim brojevima</string>
