--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -33,6 +33,7 @@
     <string name="no_contacts_found">Geen contacten gevonden</string>
     <string name="request_the_required_permissions">Om benodigde machtigingen vragen</string>
     <string name="no_access_to_contacts">De app heeft geen toegang tot uw contacten</string>
+    <string name="insert_text_here">Insert text here</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Geblokkeerde nummers beheren</string>
