--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -33,6 +33,7 @@
     <string name="no_contacts_found">Nie znaleziono kontaktów</string>
     <string name="request_the_required_permissions">Wymagaj koniecznych uprawnień</string>
     <string name="no_access_to_contacts">The app could not access your contacts</string>
+    <string name="insert_text_here">Insert text here</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Zarządzaj zablokowanymi numerami</string>
