--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -33,6 +33,7 @@
     <string name="no_contacts_found">Inga kontakter hittades</string>
     <string name="request_the_required_permissions">Begär de behörigheter som krävs</string>
     <string name="no_access_to_contacts">The app could not access your contacts</string>
+    <string name="insert_text_here">Insert text here</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Hantera blockerade nummer</string>
