--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -33,6 +33,7 @@
     <string name="no_contacts_found">未發現聯絡人</string>
     <string name="request_the_required_permissions">請求必要的權限</string>
     <string name="no_access_to_contacts">The app could not access your contacts</string>
+    <string name="insert_text_here">Insert text here</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">管理黑名單</string>
