--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -33,7 +33,7 @@
     <string name="no_contacts_found">Δεν βρέθηκαν Επαφές</string>
     <string name="request_the_required_permissions">Ζητούνται τα απαιτούμενα δικαιώματα</string>
     <string name="no_access_to_contacts">Η εφαρμογή δεν έχει πρόσβαση στις επαφές σας</string>
-    <string name="insert_text_here">Insert text here</string>
+    <string name="insert_text_here">Εισαγωγή κειμένου εδώ</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Διαχείριση αποκλεισμένων αριθμών</string>
