add some things related to promoting new apps, no need to update translations

--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -640,6 +640,7 @@
             Hola,<br><br>
             només informar-te que una nova aplicació s\'ha publicat recentment:<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             Pots descarregar-la prement el títol.<br><br>
             Gràcies
         ]]>
