--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -673,6 +673,7 @@
             Zdravím,<br><br>
             pouze bych vám chtěl oznámit, že byla nedávno uveřejněna nová aplikace:<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             Stáhnete ji klepnutím na název.<br><br>
             Děkuji
         ]]>
