--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -640,6 +640,7 @@
             Hey,<br><br>
             nur eine kleine Info zu einer neu veröffentlichten App:<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             Du kannst sie durch Drücken auf den Namen herunterladen.<br><br>
             Danke
         ]]>
