--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -640,6 +640,7 @@
             Hola,<br><br>
             solo te informamos que recientemente se ha lanzado una nueva aplicación:<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             Puedes descargarla presionando el título.<br><br>
             Gracias
         ]]>
