--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -640,6 +640,7 @@
             Hei,<br><br>
             halusin vain kertoa että uusi sovellus on julkaistu:<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             Voit ladata sen koskettamalla otsikkoa.<br><br>
             Kiitos!
         ]]>
