--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -671,6 +671,7 @@
             Hej,<br><br>
             samo da te obavijestim da je nova aplikacija nedavno objavljena:<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             Možeš je preuzeti pritiskom na naslov.<br><br>
             Hvala
         ]]>
