--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -640,6 +640,7 @@
             Hallo,<br><br>
             Er is recentelijk een nieuwe app uitgebracht:<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             Downloaden kan door een druk op de naam hierboven.<br><br>
             Dank u wel!
         ]]>
