--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -669,6 +669,7 @@
             Cześć!<br><br>
             Dajemy Ci znać, że ostatnio wyszła nowa aplikacja:<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             Możesz ją pobrać, klikając powyższy odnośnik.<br><br>
             Dziękujemy!
         ]]>
