--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -673,6 +673,7 @@
             Zdravím,<br><br>
             iba vám oznamujem, že bola nedávno vydaná nová aplikácia:<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             Viete ju stiahnuť kliknutím na názov.<br><br>
             Vďaka
         ]]>
