--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -705,6 +705,7 @@
             Pozdravljeni,<br><br>
             želimo vam sporočiti, da smo pred kratkim objavili novo aplikacijo:<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             Prenesete jo lahko s klikom na naslov.<br><br>
             Hvala
         ]]>
