--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -607,6 +607,7 @@
             嘿，<br><br>
             最近发布了一个新的应用：<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             你可以点击标题来下载。<br><br>
             谢谢。
         ]]>
