--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -638,6 +638,7 @@
             مهلاً,<br><br>
             فقط لإخبارك أنه تم إصدار تطبيق جديد مؤخراً:<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             يمكنك تنزيله بالضغط على العنوان.<br><br>
             شكراً
         ]]>
