--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -640,6 +640,7 @@
             Hey,<br><br>
             just letting you know that a new app has been released recently:<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             You can download it by pressing the title.<br><br>
             Thanks
         ]]>
