--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -764,6 +764,7 @@
             S\'mae,<br><br>
             Jyst yn rhoi gwybod i ti am ap newydd wedi\'i ryddhau yn ddiweddar:<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             Gellir ei lawrlwytho gan glicio\'r teitl.<br><br>
             Hwyl.
         ]]>
