--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -607,6 +607,7 @@
             Hai,<br><br>
             hanya memberitahu ada aplikasi baru dirilis:<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             Anda bisa mengunduhnya dengan menekan judulnya.<br><br>
             Terima kasih
         ]]>
