--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -607,6 +607,7 @@
             안녕하세요,<br><br>
             저희의 새로운 앱이 출시되었습니다:<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             위 링크를 탭하여 받을 수 있습니다.<br><br>
             감사합니다.
         ]]>
