--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -640,6 +640,7 @@
             Olá,<br><br>
             Gostariamos de avisar que lançamos um novo app recentemente:<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             Você pode baixá-lo pressionando o título.<br><br>
             Obrigado
         ]]>
