--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -640,6 +640,7 @@
             Olá.<br><br>
             Para que saibas, foi disponibilizada recentemente uma nova aplicação:<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             Podes descarregar a nova aplicação carregando no título.<br><br>
             Obrigado
         ]]>
