--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -639,6 +639,7 @@
             Поздрав,<br><br>
             само вас обавештавамо да је нова апликација објављена:<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             Можете је преузети притиском на наслов.<br><br>
             Хвала
         ]]>
