--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -640,6 +640,7 @@
             Hej,<br><br>
             jag vill bara meddela att en ny app nyligen har publicerats:<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             Du kan hämta den genom att trycka på titeln.<br><br>
             Tack
         ]]>
