--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -640,6 +640,7 @@
             Selam,<br><br>
             kısa bir süre önce yeni uygulamamın yayınlandığını bilmenizi istiyorum:<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             Başlığa basarak indirebilirsiniz.<br><br>
             Teşekkürler
         ]]>
