--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -640,6 +640,7 @@
             Привіт,<br><br>
             просто повідомляємо, що нещодавно випущено новий додаток:<br><br>
             <a href="%1$s">%2$s</a><br><br>
+            <a href="%3$s">%4$s</a><br><br>
             Ви можете його завантажити, натиснувши на заголовок.<br><br>
             Спасибі
         ]]>
