--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -32,8 +32,8 @@
     <string name="number">Número</string>
     <string name="no_contacts_found">No se encontraron contactos</string>
     <string name="request_the_required_permissions">Solicitar los permisos requeridos</string>
-    <string name="no_access_to_contacts">The app could not access your contacts</string>
-    <string name="insert_text_here">Insert text here</string>
+    <string name="no_access_to_contacts">La aplicación no puede acceder a tus contactos</string>
+    <string name="insert_text_here">Introduce el texto aquí</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Administrar números bloqueados</string>
