insert_text_here

--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -33,7 +33,7 @@
     <string name="no_contacts_found">Ingen kontakter fundet</string>
     <string name="request_the_required_permissions">Anmod om de krævede tilladelser</string>
     <string name="no_access_to_contacts">Appen kunne ikke tilgå dine kontakter</string>
-    <string name="insert_text_here">Insert text here</string>
+    <string name="insert_text_here">Indsæt tekst her</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Administrér blokerede numre</string>
